# EdgeDetectViewer

./: .gitattributes  .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgedetectviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectviewer/: GLRenderer.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/edgedetectviewer/: ExampleUnitTest.kt
docs/: index.html  main.js  package-lock.json  package.json  style.css  tsconfig.json
gradle/wrapper/: gradle-wrapper.properties
web-viewer/: index.html  package-lock.json  package.json  style.css  tsconfig.json
web-viewer/src/: main.ts
